message C2R_Login // ARequest
{
	required string	Account	 = 1;	// 帐号
	required string	Password = 2;	// 密码
}

message R2C_Login // AResponse
{
	required string Address = 1;
	required int64 	Key	    = 2;
}

message C2G_LoginGate // ARequest
{
	required int64 Key = 1;	// 帐号
}

message G2C_LoginGate // AResponse
{
	required int64 PlayerId = 1;
}

message Actor_Test // AActorMessage
{
	required string Info = 1;
}

message Actor_TestRequest // AActorRequest
{
	required string request = 1;
}

message Actor_TestResponse // AActorResponse
{
	required string response = 1;
}

message Actor_TransferRequest // AActorRequest
{
	required int32 MapIndex = 1;
}

message Actor_TransferResponse // AActorResponse
{
}

message C2G_EnterMap // ARequest
{
}

message G2C_EnterMap // AResponse
{
	required int64 UnitId = 1;
	required int32 Count  = 2;
}

message UnitInfo
{
	required int64 UnitId  = 1;
	required int32 X       = 2;
	required int32 Z       = 3;
}

message Actor_CreateUnits // AActorMessage
{
    repeated UnitInfo Units = 1;
}

message FrameMessageInfo
{
	required int64 Id = 1;
	required AMessage Message = 2;
}

message FrameMessage // AActorMessage
{
	required int32 Frame = 1;
	repeated AFrameMessage Messages = 2;
}

message Frame_ClickMap // AFrameMessage
{
	required int32 X = 1;
	required int32 Z = 2;
}

message C2M_Reload // ARequest
{
	required AppType AppType = 1;
}

message M2C_Reload // AResponse
{
}

message C2R_Ping // ARequest
{
}

message R2C_Ping // AResponse
{
}